# AIPet3

./: .flake8  .gitignore  ACTIVITIES_IMPLEMENTATION_SUMMARY.md  ACTIVITIES_INTEGRATION_GUIDE.md  ADVANCED_FEATURES.MD  ADVANCED_FEATURES.md  AI_PERSONALITY_ENGINE.md  ARCHITECTURE_PRINCIPLES.md  BATTLE_ENGINE_SPEC.md  BATTLE_SYSTEM_IMPROVEMENTS.md  CLI_WALLET_SPEC.md  CODEBASE_IMPROVEMENTS.md  CODE_OF_CONDUCT.md  CONSENSUS_MIGRATION.md  CONTRIBUTING.md  CROSS_SYSTEM_SYNERGIES.md  Codebase architecture guide.md  Config.py  Dockerfile  FINAL_DELIVERY_SUMMARY.md  GAMEPLAY_GUIDE.md  GAMEPLAY_INTEGRATION_SUMMARY.md  GOVERNANCE.md  GOVERNANCE_RUNTIME_CONFIG.md  INTEROPERABILITY.md  LAUNCH_STRATEGY.md  NODE_RUNTIME_SETUP_DETAILS.md  PALLET_DEPENDENCIES.md  PALLET_ITEMS_SECURITY_ADDENDUM.MD  PERFORMANCE_OPTIMIZATION_REPORT (1).md  PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  RUNTIME_PROJECT2_INTEGRATION.md  SCALABILITY_PLAN.md  SECURITY_PLAN.md  TOKENOMICS.md  UI_INTERACTIONS_ADVANCED.md  UI_INTERACTIONS_PROJECT2.md  UPGRADE_NOTES.md  UPGRADE_SUMMARY.md  (+14 more)
.github/: dependabot.yml
.github/workflows/: CCCCP.yml
BlockChain/: BLOCKCHAIN_OPTIMIZATIONS.md  CONTRIBUTING.md  GOVERNANCE_README.md  README.md  demo_pet_data.json  integrated_pet_data.json  pet_data.json  pytest.ini
BlockChain/critter-craft/: README.md  requirements.txt
BlockChain/critter-craft/src/: main.py
BlockChain/node/src/: chain_spec.rs  cli_exstention.rs  main.rs  rpc.rs  service.rs
BlockChain/pallets/: IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  MARKETPLACE_TRADING_README.md  USAGE_EXAMPLES.md  __init__.py  breeding_integration.py  economy_integration.py  integration.py  optimized_integration.py
BlockChain/pallets/critter_battle_pallet/pallet-critter-battle/: Cargo.toml  README.md
BlockChain/pallets/critter_battle_pallet/pallet-critter-battle/src/: lib.rs
BlockChain/pallets/critter_nfts_pallet/pallet-critter-nfts/: ADVANCED_FEATURES.md  Cargo.toml  NFT_MANAGEMENT_TRAIT.md  README.md  SYNCHRONIZATION.md
BlockChain/pallets/critter_nfts_pallet/pallet-critter-nfts/src/: achievements.rs  analytics.rs  environment.rs  interactive.rs  interactive_cleanup_final_summary.md  interactive_cleanup_final_summary_updated.md  interactive_cleanup_implementation.md  interactive_cleanup_instructions.md  interactive_cleanup_recommendation.md  interactive_cleanup_summary.md  interactive_cleanup_summary_updated.md  interactive_updated.md  interactive_updated.rs  lib.rs  lifecycle.rs  memory.rs  mood.rs  personality.rs  seasonal.rs  social.rs  state.rs  sync.rs  test.rs  training.rs  traits.rs  ui_bridge.rs  user_experience.rs  visual.rs  weights.rs
BlockChain/pallets/critter_pet_status_pallet/pallet_critter_pet_status/: Cargo.toml
BlockChain/pallets/critter_pet_status_pallet/pallet_critter_pet_status/src/: lib.rs
BlockChain/pallets/pallet-battles/: README.md  run_demo.py
BlockChain/pallets/pallet-breeding/: README.md  run_demo.py
BlockChain/pallets/pallet-community-content/: Cargo.toml  README.md
BlockChain/pallets/pallet-community-content/src/: lib.rs  mock.rs  tests.rs
BlockChain/pallets/pallet-economy/: README.md  run_demo.py
BlockChain/pallets/pallet-ledger/: README.md  run_demo.py
BlockChain/pallets/pallet-quest/: run_demo.py
BlockChain/pallets/pallet-quests/: OPTIMIZATIONS.md  README.md  SUMMARY.md  __init__.py  run_demo.py  run_test.py
BlockChain/pallets/traits/crittercraft-traits/: Cargo.toml
BlockChain/pallets/traits/crittercraft-traits/src/: battle.rs  breeding.rs  lib.rs  nft.rs  types.rs
BlockChain/pet/: README.md  __init__.py  config.py  integrated_core.py  main.py
BlockChain/pet/Ai/: README.md  __init__ (1).py  advanced_constants.py  ai_demo.py  cli_advanced.py  config.py  critter_core.py  memory.py  pet_core.py
BlockChain/pet/ai/: advanced_services.py  critter_demo.py  critter_main.py  demo.py  emuns.py  integrated_core.py  integrated_demo.py  integrated_main.py  manager.py  pet_data.json
BlockChain/runtime/: crittercraft_runtime.rs
BlockChain/runtime/src/: crittercraft_runtime.rs
BlockChain/traits/: Cargo.toml
BlockChain/ui_wallet/: optimized_app.js  style.css
blockchain_core/node_src/: chain_spec.rs  main.rs  rpc.rs  service.rs
blockchain_core/pallets/critter_nfts_pallet/: Cargo.toml  README.md
blockchain_core/pallets/critter_nfts_pallet/src/: benchmarking.rs  lib.rs  test.rs  traits.rs  types.rs
blockchain_core/specs/: DESIGN_DOC.md
blockchain_core/traits/src/: lib.rs
blockchain_core/ui_wallet/: app.js  index.html
cmd/test_dds_ledger_integration/: main.go
cmd/test_user_profiles/: main.go
core/content/: publisher.go  publisher_test.go  retriever.go  retriever_test.go
core/user/: profile.go  profile_manager.go  profile_manager_test.go  profile_test.go
docs/: ai_integration.md  architecture.md  blockchain_integration.md  development_setup.md  game_mechanics.md
financial_document_generator/: README.md  __init__.py  config.py  requirements.txt
financial_document_generator/app/: __init__.py  bank_statement_generator.py  check_generator.py  forms_wtf.py  main.py  w2_form_generator.py
financial_document_generator/app/forms/: w2_form_generator.py
financial_document_generator/app/generators/: .gitkeep  bank_statement_generator.py  (+6 more)
financial_document_generator/static/: style.css
financial_document_generator/templates/: bank_statement.html  check.html  check_stub.html  earning_statement.html  income_statement.html  w2_form.html  w2_template.html
financial_document_generator/tests/: test_bank_statement_generator.py  test_check_generator.py  test_check_stub_generator.py  test_earning_statement_generator.py  test_income_statement_generator.py  test_integration.py  test_w2_form_generator.py
frontend/: .eslintrc.js  .prettierrc.js  package-lock.json  package.json  vite.config.ts
frontend/scr/: crittercraft_api.js
frontend/src/: App.jsx  crittercraft_api.js  crittercraft_api_improved.js
node/src/: chain_spec.rs  main.rs
pet/: pet.py  pet_core.py
pkg/identity/: keys.go  wallet.go
pkg/ledger/: block.go  blockchain.go  model.go  transaction.go
(+131 files in other folders)
