[package]
name = "pallet-community-content"
version = "0.1.0"
edition = "2021"
description = "Community content management pallet for CritterCraft Universe"
authors = ["CritterCraft Team"]
license = "MIT"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-support = { default-features = false, version = "4.0.0-dev" }
frame-system = { default-features = false, version = "4.0.0-dev" }
sp-runtime = { default-features = false, version = "7.0.0" }
sp-std = { default-features = false, version = "5.0.0" }

[dev-dependencies]
sp-core = { default-features = false, version = "7.0.0" }
sp-io = { default-features = false, version = "7.0.0" }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
]
try-runtime = ["frame-support/try-runtime"]